# VulCode

./: .bazelrc  WORKSPACE.bazel  conftest.py  defs.bzl  vulcode-workspace.yml
config/: blame-deprecations.mjs  dbscheme-fragments.json  identical-files.json  opcode-qldoc.py  sync-dbscheme-fragments.py  sync-files.py
config/atm/ml-powered-queries-repo/: add-note.js  app.js  index.js  logger.js  notes-api.js  read-notes.js  users-api.js
config/atm/ml-powered-queries-repo/models/: note.js  user.js
